@@ -1,6 +1,11 @@
 # ChangeLog for x11-terms/pssh
-# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-terms/pssh/Attic/ChangeLog,v 1.3 2004/11/04 11:17:36 voxus Exp $
+# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-terms/pssh/Attic/ChangeLog,v 1.4 2005/05/24 23:44:35 spyderous Exp $
+
+*pssh-1.2.0 (24 May 2005)
+
+  24 May 2005; Donnie Berkholz <spyderous@gentoo.org>; +pssh-1.2.0.ebuild:
+  (#87320) Version bump.
 
 *pssh-1.0.0 (04 Nov 2004)
 
